# ECMS_2025

./: .gitignore  CMakeLists.txt  README.md
data/: check_in.json  checked_in_players.json  players.json  results.json  spectators.json  tournaments.json
include/: CircularQueue.hpp  Enum.hpp  Match.hpp  Performance.hpp  Player.hpp  PriorityQueue.hpp  Queue.hpp  Result.hpp  Spectator.hpp  Stack.hpp  Tournament.hpp
include/dto/: Match.hpp  Performance.hpp  Player.hpp  Result.hpp  Spectator.hpp  Tournament.hpp
include/functions/: GameResultLogger.hpp  MatchScheduler.hpp  PlayerManager.hpp  PlayerRegistration.hpp  SeatingManager.hpp  SpectatorRegistration.hpp  TournamentManager.hpp
include/general/: Enum.hpp
include/helper/: JsonLoader.hpp  JsonWriter.hpp
include/manager/: Task1Manager.hpp  Task2Manager.hpp
include/structures/: CircularQueue.hpp  DoublyLinkedList.hpp  DynamicArray.hpp  PlayerPair.hpp  PriorityQueue.hpp  Queue.hpp
src/: main.cpp
src/dto/: Match.cpp  Performance.cpp  Player.cpp  Result.cpp  Spectator.cpp  Tournament.cpp
src/functions/: GameResultLogger.cpp  MatchScheduler.cpp  PlayerManager.cpp  SeatingManager.cpp  TournamentManager.cpp
src/helper/: JsonLoader.cpp  JsonWriter.cpp
src/manager/: Task1Manager.cpp  Task2Manager.cpp
src/registration/: PlayerRegistration.cpp  SpectatorRegistration.cpp
